--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "brandsnob",
-  "version": "1.0.0",
+  "name": "brandsnobs",
+  "version": "1.7.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,7 +10,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.263.1"
+    "lucide-react": "^0.263.1",
+    "firebase": "^10.7.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.0",
