--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "lucide-react": "^0.263.1",
-    "firebase": "^10.7.1"
+    "firebase": "^10.7.1",
+    "@emailjs/browser": "^4.3.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.0",
