--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brandsnobs",
-  "version": "1.7.0",
+  "version": "1.8.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,8 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "lucide-react": "^0.263.1",
-    "firebase": "^10.7.1",
-    "@emailjs/browser": "^4.3.3"
+    "firebase": "^10.7.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.0",
